--- a/rick/rickroll.html
+++ b/rick/rickroll.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./Rickrolling.gif" alt="rickroll">
+    <img src="./images/Rickrolling.gif" alt="rickroll">
     <h2>youve been rickrolled</h2>
 </body>
 </html>
